# work_tg_bot

./: LICENSE  README.md  bot.py  pyproject.toml  sqlite.py
work_tg_bot/: bot.py  create_bot.py  db.sqlite  dns_db.sqlite  start.py  utils.py
work_tg_bot/database/: db.py
work_tg_bot/handlers/: core.py  dns.py  dns_db.sqlite  utils.py  validators.py
work_tg_bot/keyboards/: core_kb.py
work_tg_bot/services/: dns.py
