[tool.poetry]
name = "work-tg-bot"
version = "0.1.0"
description = ""
authors = ["Doppelgangeres <artyom.kovalenko003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "<4.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
